--- a/main.html
+++ b/main.html
@@ -7,6 +7,35 @@
 </head>
 
 <body>
+	 <nav>
+      <ul>
+        <li>
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Video_and_audio_content"
+          >MDN docs</a>
+        </li>
+        <li>
+          <a
+            href="https://us06web.zoom.us/postattendee?mn=28lxDS0Xjkf3Ch_E1eapWvwRm2u5ph15Toj5.gY2vXt5L_yIClROC"
+          >Zoom</a>
+        </li>
+        <li>
+          <a
+            href="https://course.acciojob.com/open-web-editor?question=5996f997-e577-4a36-8ead-a0aeff480821"
+          >acciojob</a>
+        </li>
+      </ul>
+    </nav>
+    <h2>3 random audios</h2>
+    <audio controls>
+      <source src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3"/>
+    </audio>
+    <audio controls>
+      <source src=" http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"/>
+    </audio>
+    <audio controls>
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3"/>
+    </audio>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
